--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -62,7 +62,7 @@ tasks:
     deps:
       - cli:test:e2e:ginkgo:install
     dir: e2e
-    cmd: go run github.com/onsi/ginkgo/v2/ginkgo@latest --label-filter "{{ .CLI_ARGS }}"
+    cmd: go run github.com/onsi/ginkgo/v2/ginkgo@latest --label-filter {{ .CLI_ARGS }}
 
   cli:test:e2e:focus:
     # usage: task cli:test:e2e:focus -- "test suite pattern"
@@ -70,7 +70,7 @@ tasks:
     deps:
       - cli:test:e2e:ginkgo:install
     dir: e2e
-    cmd: go run github.com/onsi/ginkgo/v2/ginkgo@latest --focus "{{ .CLI_ARGS }}"
+    cmd: go run github.com/onsi/ginkgo/v2/ginkgo@latest --focus {{ .CLI_ARGS }}
 
   cli:test:e2e:kind:setup:
     desc: setup kind cluster for e2e tests
@@ -86,6 +86,11 @@ tasks:
       GOPROXY: direct
     status: [command -v ginkgo >/dev/null 2>&1]
     cmd: go install github.com/onsi/ginkgo/v2/ginkgo@latest
+
+  cli:test:e2e:act:focus:
+    # usage: task cli:test:e2e:act:focus -- "test focus pattern"
+    desc: run e2e tests using act with focus
+    cmd: act workflow_dispatch -W .github/workflows/test.yml --input test_focus={{ .CLI_ARGS }}
 
   desktop:build:
     desc: build devpod Desktop application
