--- a/desktop/package.json
+++ b/desktop/package.json
@@ -8,11 +8,12 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "desktop:dev": "tauri dev --config src-tauri/tauri-dev.conf.json",
+    "desktop:dev": "tauri dev",
     "desktop:dev:debug": "DEBUG=true yarn desktop:dev",
-    "desktop:build:dev": "DEBUG=true tauri build --config src-tauri/tauri-dev.conf.json",
-    "desktop:build:flatpak": "tauri build --config src-tauri/tauri-flatpak.conf.json",
-    "desktop:build:flatpak:debug": "DEBUG=true tauri build --config src-tauri/tauri-flatpak.conf.json --debug",
+    "desktop:build:dev": "DEBUG=true tauri build --debug",
+    "desktop:build:flatpak": "tauri build --config src-tauri/tauri.flatpak.conf.json",
+    "desktop:build:flatpak:debug": "DEBUG=true tauri build --config src-tauri/tauri.flatpak.conf.json --debug",
+    "desktop:build:appimage": "tauri build --config src-tauri/tauri.appimage.conf.json",
     "desktop:build:debug": "tauri build --debug",
     "desktop:build": "tauri build",
     "format:check": "prettier --check .",
