--- a/desktop/package.json
+++ b/desktop/package.json
@@ -11,9 +11,7 @@
     "desktop:dev": "tauri dev",
     "desktop:dev:debug": "DEBUG=true yarn desktop:dev",
     "desktop:build:dev": "DEBUG=true tauri build --debug",
-    "desktop:build:flatpak": "tauri build --config src-tauri/tauri.flatpak.conf.json",
-    "desktop:build:flatpak:debug": "DEBUG=true tauri build --config src-tauri/tauri.flatpak.conf.json --debug",
-    "desktop:build:appimage": "tauri build --config src-tauri/tauri.appimage.conf.json",
+    "desktop:build:appimage": "tauri build --bundles appimage",
     "desktop:build:debug": "tauri build --debug",
     "desktop:build": "tauri build",
     "format:check": "prettier --check .",
